assignment1 is modified and assignment2 is done

--- a/assignment1/3.html
+++ b/assignment1/3.html
@@ -58,7 +58,7 @@
                 <p class="empCount"><i>$5</i> per employee / month</p>
 
                 <div>
-                    <p class="plan">All Palns Include</p>
+                    <p class="plan">All Plans Include</p>
                 </div>
 
                 <div class="container">
