--- a/assignment2/2-2.html
+++ b/assignment2/2-2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Panel</title>
-  <link rel="stylesheet" href="/assignment2/2-2.css">
+  <link rel="stylesheet" href="/2-2.css">
 </head>
 
 <body>
@@ -13,8 +13,8 @@
     <button class="btn">+ Add Admin</button>
     <div>
       <button class="btn btn-page">page:1 total: 20
-        <img src="/assignment2/left.png">
-        <img src="/assignment2/next.png">
+        <img src="/left.png">
+        <img src="/next.png">
       </button>
     </div>
   </div>
@@ -30,62 +30,65 @@
     <div class="table-cell actions">ACTIONS</div>
   </div>
 
+
+  <div class="table-row-data-list">
+
   <div class="table-row-data">
     <div class="table-cell id">1</div>
-    <div class="table-cell photo"><img src="/assignment1/user.png" alt="User Photo"></div>
+    <div class="table-cell photo"><img src="/user.png" alt="User Photo"></div>
     <div class="table-cell login">user437776556</div>
     <div class="table-cell name">John Doe</div>
     <div class="table-cell mail">john@example.com</div>
     <div class="table-cell staff">1</div>
     <div class="table-cell actions">
-      <img src="/assignment2/plus.png">
-      <img src="/assignment2/edit.png">
-      <img src="/assignment2/bin.png">
+      <img src="/plus.png">
+      <img src="/edit.png">
+      <img src="/bin.png">
     </div>
   </div>
 
 
   <div class="table-row-data">
     <div class="table-cell id">2</div>
-    <div class="table-cell photo"><img src="/assignment1/user.png" alt="User Photo"></div>
+    <div class="table-cell photo"><img src="/user.png" alt="User Photo"></div>
     <div class="table-cell login">user456</div>
     <div class="table-cell name">Jane Smith</div>
     <div class="table-cell mail">jane@example.com</div>
     <div class="table-cell staff">2</div>
     <div class="table-cell actions">
-      <img src="/assignment2/plus.png">
-      <img src="/assignment2/edit.png">
-      <img src="/assignment2/bin.png">
+      <img src="/plus.png">
+      <img src="/edit.png">
+      <img src="/bin.png">
     </div>
   </div>
 
 
   <div class="table-row-data">
     <div class="table-cell id">2</div>
-    <div class="table-cell photo"><img src="/assignment1/user.png" alt="User Photo"></div>
+    <div class="table-cell photo"><img src="/user.png" alt="User Photo"></div>
     <div class="table-cell login">id76543456</div>
     <div class="table-cell name">Micheal Johnson</div>
     <div class="table-cell mail">micheal.jonhnson@example.com</div>
     <div class="table-cell staff">3</div>
     <div class="table-cell actions">
-      <img src="/assignment2/plus.png">
-      <img src="/assignment2/edit.png">
-      <img src="/assignment2/bin.png">
+      <img src="/plus.png">
+      <img src="/edit.png">
+      <img src="/bin.png">
     </div>
   </div>
 
 
   <div class="table-row-data">
     <div class="table-cell id">4</div>
-    <div class="table-cell photo"><img src="/assignment1/user.png" alt="User Photo"></div>
+    <div class="table-cell photo"><img src="/user.png" alt="User Photo"></div>
     <div class="table-cell login">id543456</div>
     <div class="table-cell name">Emily Brown</div>
     <div class="table-cell mail">emily.brown@example.com</div>
     <div class="table-cell staff">4</div>
     <div class="table-cell actions">
-      <img src="/assignment2/plus.png">
-      <img src="/assignment2/edit.png">
-      <img src="/assignment2/bin.png">
+      <img src="/plus.png">
+      <img src="/edit.png">
+      <img src="/bin.png">
     </div>
   </div>
 
@@ -93,15 +96,15 @@
 
   <div class="table-row-data">
     <div class="table-cell id">5</div>
-    <div class="table-cell photo"><img src="/assignment1/user.png" alt="User Photo"></div>
+    <div class="table-cell photo"><img src="/user.png" alt="User Photo"></div>
     <div class="table-cell login">id55443456</div>
     <div class="table-cell name">William Lee</div>
     <div class="table-cell mail">william.lee@example.com</div>
     <div class="table-cell staff">5</div>
     <div class="table-cell actions">
-      <img src="/assignment2/plus.png">
-      <img src="/assignment2/edit.png">
-      <img src="/assignment2/bin.png">
+      <img src="/plus.png">
+      <img src="/edit.png">
+      <img src="/bin.png">
     </div>
   </div>
 
@@ -109,30 +112,30 @@
 
   <div class="table-row-data">
     <div class="table-cell id">6</div>
-    <div class="table-cell photo"><img src="/assignment1/user.png" alt="User Photo"></div>
+    <div class="table-cell photo"><img src="/user.png" alt="User Photo"></div>
     <div class="table-cell login">id43456</div>
     <div class="table-cell name">Olivia Taylor</div>
     <div class="table-cell mail">olivia.taylor@example.com</div>
     <div class="table-cell staff">6</div>
     <div class="table-cell actions">
-      <img src="/assignment2/plus.png">
-      <img src="/assignment2/edit.png">
-      <img src="/assignment2/bin.png">
+      <img src="/plus.png">
+      <img src="/edit.png">
+      <img src="/bin.png">
     </div>
   </div>
 
 
   <div class="table-row-data">
     <div class="table-cell id">7</div>
-    <div class="table-cell photo"><img src="/assignment1/user.png" alt="User Photo"></div>
+    <div class="table-cell photo"><img src="/user.png" alt="User Photo"></div>
     <div class="table-cell login">id4346656</div>
     <div class="table-cell name">Sofia Anderson</div>
     <div class="table-cell mail">sofia.anderson@example.com</div>
     <div class="table-cell staff">7</div>
     <div class="table-cell actions">
-      <img src="/assignment2/plus.png">
-      <img src="/assignment2/edit.png">
-      <img src="/assignment2/bin.png">
+      <img src="/plus.png">
+      <img src="/edit.png">
+      <img src="/bin.png">
     </div>
   </div>
 
@@ -140,47 +143,50 @@
 
   <div class="table-row-data">
     <div class="table-cell id">8</div>
-    <div class="table-cell photo"><img src="/assignment1/user.png" alt="User Photo"></div>
+    <div class="table-cell photo"><img src="/user.png" alt="User Photo"></div>
     <div class="table-cell login">id946656</div>
     <div class="table-cell name">David Martinez</div>
     <div class="table-cell mail">david.martinez@example.com</div>
     <div class="table-cell staff">8</div>
     <div class="table-cell actions">
-      <img src="/assignment2/plus.png">
-      <img src="/assignment2/edit.png">
-      <img src="/assignment2/bin.png">
+      <img src="/plus.png">
+      <img src="/edit.png">
+      <img src="/bin.png">
     </div>
   </div>
 
 
   <div class="table-row-data">
     <div class="table-cell id">9</div>
-    <div class="table-cell photo"><img src="/assignment1/user.png" alt="User Photo"></div>
+    <div class="table-cell photo"><img src="/user.png" alt="User Photo"></div>
     <div class="table-cell login">id907656</div>
     <div class="table-cell name">James Wilson</div>
     <div class="table-cell mail">james.wilson@example.com</div>
     <div class="table-cell staff">9</div>
     <div class="table-cell actions">
-      <img src="/assignment2/plus.png">
-      <img src="/assignment2/edit.png">
-      <img src="/assignment2/bin.png">
+      <img src="/plus.png">
+      <img src="/edit.png">
+      <img src="/bin.png">
     </div>
   </div>
 
 
   <div class="table-row-data">
     <div class="table-cell id">10</div>
-    <div class="table-cell photo"><img src="/assignment1/user.png" alt="User Photo"></div>
+    <div class="table-cell photo"><img src="/user.png" alt="User Photo"></div>
     <div class="table-cell login">id9476656</div>
     <div class="table-cell name">Justin Bieber</div>
     <div class="table-cell mail">justin@example.com</div>
     <div class="table-cell staff">10</div>
     <div class="table-cell actions">
-      <img src="/assignment2/plus.png">
-      <img src="/assignment2/edit.png">
-      <img src="/assignment2/bin.png">
+      <img src="/plus.png">
+      <img src="/edit.png">
+      <img src="/bin.png">
     </div>
   </div>
+
+
+</div>
 </body>
 
 </html>
