finished assignment4(logic code), have to implement UI

--- a/assignment1/3.html
+++ b/assignment1/3.html
@@ -36,7 +36,7 @@
         <div class="smallBox">
             <section>
                 <p class="p1">
-                    How Many employee &<br>Customer Do You Have?
+                    How Many employees &<br>Customers Do You Have?
                 </p>
 
                 <h3 class="h3">5,000</h3>
