--- a/assignment4/form.html
+++ b/assignment4/form.html
@@ -5,18 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FormPage</title>
-    <link rel="stylesheet" href="assignment3.css">
+    <link rel="stylesheet" href="form.css">
 </head>
 
 <body>
-    <header>
-        <h3>Validation Page</h3>
-        <nav>
-            <a href="alertbox.html">Alert Box</a>
-            <a href="tools.html">Tools</a>
-            <a href="form.html" id="form">Form</a>
-        </nav>
-    </header>
+    
 
 
     <div class="login-container">
