--- a/assignment3/assignment3.html
+++ b/assignment3/assignment3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
-    <link rel="stylesheet" href="/assignment3/assignment3.css">
+    <link rel="stylesheet" href="assignment3.css">
 </head>
 
 <body>
